Fix line-height issue on .controller-button on Safari

--- a/web/src/app/components/HomeScreen/TopSection/TopSection.scss
+++ b/web/src/app/components/HomeScreen/TopSection/TopSection.scss
@@ -54,6 +54,10 @@
       color: $user-name-color;
       font-size: 0;
       @include transform(translateX(-50%));
+
+      @include safari-polyfill {
+        line-height: 1.5;
+      }
     }
   }
 }
